Add CSS styling for homepage

--- a/index.html
+++ b/index.html
@@ -1,9 +1,48 @@
-<html>
-  <head>
-    <title>My blog</title>
-  <body>
-    <h1>Kia ora Taiao! (Hello World!)</h1> 
-    <p> This is the beginning of my website home page.</p>
-    <p> It will eventually contain a list of links to all my blogs. </p>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <link rel="stylesheet" href="styles/main.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300&display=swap" rel="stylesheet">
+  <title>Blog Site | Pei Zhang</title>
+</head>
+<body>
+<div class="topbar-container"  id="back-to-top">
+  <ul class="nav">
+    <li><a class="nav-link" href="#home">Home</a></li>
+    <li><a class="nav-link" href="#news">Tech</a></li>
+    <li><a class="nav-link" href="#contact">Core</a></li>
+    <li><a class="nav-link" href="#about">About</a></li>
+  </ul>
+</div>
+<div class="header"><h1>PEI ZHANG</h1></div>
+<div class="mid-container"></div>
+<div class="tech-container">
+  <ul class="tech">
+    <li class="tech-left"><h2>Tech Blog</h2><a href="#">Difference between Margin, Border, and Padding</a></li>
+    <li class="tech-right"><img class="tech-image" src="image/carl-heyerdahl-KE0nC8-58MQ-unsplash.jpg"></li>
+  </ul>
+</div>
+<div class="core-container">
+  <ul>
+    <li class="core-right"><h2>Core Blog</h2><a href="#">Identity & Values</a><a href="#">Learning Plan</a></li>
+    <li class="core-left"><img class="core-image" src="image/d-koi-GU_nNLVna_4-unsplash.jpg"></li>
+  </ul>
+</div>
+<div class="about-container">
+  <ul>
+    <li class="about-left"><h2>About me</h2>
+      <p>Hi there, welcome to Pei's blog.</p>
+      <p>I'm a former interior designer who has just</p>
+      <p>started her journey with Dev Academy to</p>
+      <p>become a full-stack web developer.</p></li>
+    <li class="about-right"><img class="about-image" src="image/ABOUT ME.jpg"></li>
+  </ul>
+</div>
+<div class="footer"><a href="#back-to-top">Back to top</a></div>
+</body>
 </html>
