Link Identity&Values

--- a/index.html
+++ b/index.html
@@ -13,27 +13,27 @@
 <body>
 <div class="topbar-container"  id="back-to-top">
   <ul class="nav">
-    <li><a class="nav-link" href="#home">Home</a></li>
-    <li><a class="nav-link" href="#news">Tech</a></li>
-    <li><a class="nav-link" href="#contact">Core</a></li>
-    <li><a class="nav-link" href="#about">About</a></li>
+    <li><a class="nav-link" href="https://pei-yeshuang-zhang.github.io/">Home</a></li>
+    <li><a class="nav-link" href="#tech">Tech</a></li>
+    <li><a class="nav-link" href="#core">Core</a></li>
+    <li><a class="nav-link" href="#about-me">About</a></li>
   </ul>
 </div>
 <div class="header"><h1>PEI ZHANG</h1></div>
 <div class="mid-container"></div>
-<div class="tech-container">
+<div class="tech-container" id="tech">
   <ul class="tech">
     <li class="tech-left"><h2>Tech Blog</h2><a href="#">Difference between Margin, Border, and Padding</a></li>
     <li class="tech-right"><img class="tech-image" src="image/carl-heyerdahl-KE0nC8-58MQ-unsplash.jpg"></li>
   </ul>
 </div>
-<div class="core-container">
+<div class="core-container" id="core">
   <ul>
-    <li class="core-right"><h2>Core Blog</h2><a href="#">Identity & Values</a><a href="#">Learning Plan</a></li>
     <li class="core-left"><img class="core-image" src="image/d-koi-GU_nNLVna_4-unsplash.jpg"></li>
+    <li class="core-right"><h2>Core Blog</h2><a href="blog/Identity&Values.html">Identity & Values</a><a href="#">Learning Plan</a></li>
   </ul>
 </div>
-<div class="about-container">
+<div class="about-container" id="about-me">
   <ul>
     <li class="about-left"><h2>About me</h2>
       <p>Hi there, welcome to Pei's blog.</p>
