Fix the link to homepage

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 <div class="topbar-container"  id="back-to-top">
   <ul class="nav">
-    <li><a class="nav-link" href="https://pei-yeshuang-zhang.github.io/">Home</a></li>
+    <li><a class="nav-link" href="index.html">Home</a></li>
     <li><a class="nav-link" href="#tech">Tech</a></li>
     <li><a class="nav-link" href="#core">Core</a></li>
     <li><a class="nav-link" href="#about-me">About</a></li>
