--- a/index.html
+++ b/index.html
@@ -14,26 +14,26 @@
 <div class="topbar-container"  id="back-to-top">
   <ul class="nav">
     <li><a class="nav-link" href="index.html">Home</a></li>
-    <li><a class="nav-link" href="#tech">Tech</a></li>
-    <li><a class="nav-link" href="#core">Core</a></li>
-    <li><a class="nav-link" href="#about-me">About</a></li>
+    <li><a class="nav-link" href="blog/tech-blog-page.html">Tech</a></li>
+    <li><a class="nav-link" href="blog/core-blog-page.html">Core</a></li>
+    <li><a class="nav-link" href="blog/about-me.html">About</a></li>
   </ul>
 </div>
 <div class="header"><h1>PEI ZHANG</h1></div>
 <div class="mid-container"></div>
-<div class="tech-container" id="tech">
+<div class="tech-container">
   <ul class="tech">
     <li class="tech-left"><h2>Tech Blog</h2><a href="#">Difference between Margin, Border, and Padding</a></li>
     <li class="tech-right"><img class="tech-image" src="image/carl-heyerdahl-KE0nC8-58MQ-unsplash.jpg"></li>
   </ul>
 </div>
-<div class="core-container" id="core">
+<div class="core-container">
   <ul>
     <li class="core-left"><img class="core-image" src="image/d-koi-GU_nNLVna_4-unsplash.jpg"></li>
     <li class="core-right"><h2>Core Blog</h2><a href="blog/Identity&Values.html">Identity & Values</a><a href="#">Learning Plan</a></li>
   </ul>
 </div>
-<div class="about-container" id="about-me">
+<div class="about-container">
   <ul>
     <li class="about-left"><h2>About me</h2>
       <p>Hi there, welcome to Pei's blog.</p>
