--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
 <div class="mid-container"></div>
 <div class="tech-container">
   <ul class="tech">
-    <li class="tech-left"><h2>Tech Blog</h2><a href="#">Difference between Margin, Border, and Padding</a></li>
+    <li class="tech-left"><h2>Tech Blog</h2><a href="blog/Sprint-2-Tech.html">Difference between Margin, Border, and Padding</a></li>
     <li class="tech-right"><img class="tech-image" src="image/carl-heyerdahl-KE0nC8-58MQ-unsplash.jpg"></li>
   </ul>
 </div>
 <div class="core-container">
   <ul>
     <li class="core-left"><img class="core-image" src="image/d-koi-GU_nNLVna_4-unsplash.jpg"></li>
-    <li class="core-right"><h2>Core Blog</h2><a href="blog/Identity&Values.html">Identity & Values</a><a href="#">Learning Plan</a></li>
+    <li class="core-right"><h2>Core Blog</h2><a href="blog/Identity&Values.html">Identity & Values</a><a href="blog/Learning-Plan.html">Learning Plan</a></li>
   </ul>
 </div>
 <div class="about-container">
   <ul>
-    <li class="about-left"><h2>About me</h2>
+    <li class="about-left"><h2><a href="blog/about-me.html">About Me</a></h2>
       <p>Hi there, welcome to Pei's blog.</p>
       <p>I'm a former interior designer who has just</p>
       <p>started her journey with Dev Academy to</p>
