--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="styles/main.css">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maxmum-scale=1.0, minimum-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300&display=swap" rel="stylesheet">
@@ -21,27 +21,39 @@
 </div>
 <div class="header"><h1>PEI ZHANG</h1></div>
 <div class="mid-container"></div>
-<div class="tech-container">
-  <ul class="tech">
-    <li class="tech-left"><h2>Tech Blog</h2><a href="blog/Sprint-2-Tech.html">Difference between Margin, Border, and Padding</a></li>
-    <li class="tech-right"><img class="tech-image" src="image/carl-heyerdahl-KE0nC8-58MQ-unsplash.jpg"></li>
-  </ul>
+
+<div class="content-container">
+  <div class="blog">
+    <h2>Tech Blog</h2>
+    <p><a href="blog/Sprint-2-Tech.html">Differences between Margin, Border, and Padding</a></p>
+  </div>
+  <div class="image">  
+    <img src="image/carl-heyerdahl-KE0nC8-58MQ-unsplash.jpg">
+  </div>
 </div>
-<div class="core-container">
-  <ul>
-    <li class="core-left"><img class="core-image" src="image/d-koi-GU_nNLVna_4-unsplash.jpg"></li>
-    <li class="core-right"><h2>Core Blog</h2><a href="blog/Identity&Values.html">Identity & Values</a><a href="blog/Learning-Plan.html">Learning Plan</a></li>
-  </ul>
+
+<div class="content-container">
+  <div class="image">  
+    <img src="image/d-koi-GU_nNLVna_4-unsplash.jpg">
+   </div>
+  <div class="core-blog">
+   <h2>Core Blog</h2>
+   <p><a href="blog/Identity&Values.html">Identity & Values</a></p>
+   <p><a href="blog/Learning-Plan.html">Learning Plan</a></p>
+  </div>
 </div>
-<div class="about-container">
-  <ul>
-    <li class="about-left"><h2><a href="blog/about-me.html">About Me</a></h2>
+
+<div class="content-container">
+    <div class="blog">
+      <h2><a href="blog/about-me.html">About Me</a></h2>
       <p>Hi there, welcome to Pei's blog.</p>
       <p>I'm a former interior designer who has just</p>
       <p>started her journey with Dev Academy to</p>
-      <p>become a full-stack web developer.</p></li>
-    <li class="about-right"><img class="about-image" src="image/ABOUT ME.jpg"></li>
-  </ul>
+      <p>become a full-stack web developer.</p>
+    </div>
+    <div class="image">
+      <img src="image/ABOUT ME.jpg">
+    </div>
 </div>
 <div class="footer"><a href="#back-to-top">Back to top</a></div>
 </body>
