--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <div class="content-container">
   <div class="blog">
     <h2>Tech Blog</h2>
+    <p><a href="blog/te-houtaewa-template.html">The Story of Te Houtaewa</a></p>
     <p><a href="blog/Sprint-2-Tech.html">Differences between Margin, Border, and Padding</a></p>
   </div>
   <div class="image">  
