--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <h2>Tech Blog</h2>
     <p><a href="blog/te-houtaewa-template.html">The Story of Te Houtaewa</a></p>
     <p><a href="blog/Sprint-2-Tech.html">Differences between Margin, Border, and Padding</a></p>
+    <p><a href="blog/javascript-dom.html">JavaScript & DOM</a></p>
   </div>
   <div class="image">  
     <img src="image/carl-heyerdahl-KE0nC8-58MQ-unsplash.jpg">
@@ -39,8 +40,9 @@
    </div>
   <div class="core-blog">
    <h2>Core Blog</h2>
-   <p><a href="blog/Identity&Values.html">Identity & Values</a></p>
-   <p><a href="blog/Learning-Plan.html">Learning Plan</a></p>
+   <p style="text-align: right"><a href="blog/Identity&Values.html">Identity & Values</a></p>
+   <p style="text-align: right"><a href="blog/Learning-Plan.html">Learning Plan</a></p>
+   <p style="text-align: right"><a href="blog/emotional-intelligence.html">Emotional Intelligence</a></p>
   </div>
 </div>
 
