Add links of sprint 4 blogs

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <p><a href="blog/te-houtaewa-template.html">The Story of Te Houtaewa</a></p>
     <p><a href="blog/Sprint-2-Tech.html">Differences between Margin, Border, and Padding</a></p>
     <p><a href="blog/javascript-dom.html">JavaScript & DOM</a></p>
+    <p><a href="blog/problem-solving.html">Problem Solving</a></p>
   </div>
   <div class="image">  
     <img src="image/carl-heyerdahl-KE0nC8-58MQ-unsplash.jpg">
@@ -43,6 +44,7 @@
    <p style="text-align: right"><a href="blog/Identity&Values.html">Identity & Values</a></p>
    <p style="text-align: right"><a href="blog/Learning-Plan.html">Learning Plan</a></p>
    <p style="text-align: right"><a href="blog/emotional-intelligence.html">Emotional Intelligence</a></p>
+   <p style="text-align: right"><a href="blog/neuroplasticity.html">Problem Solving</a></p>
   </div>
 </div>
 
