--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <p><a href="blog/te-houtaewa-template.html">The Story of Te Houtaewa</a></p>
     <p><a href="blog/Sprint-2-Tech.html">Differences between Margin, Border, and Padding</a></p>
     <p><a href="blog/javascript-dom.html">JavaScript & DOM</a></p>
-    <p><a href="blog/problem-solving.html">Problem Solving</a></p>
+    <p><a href="blog/problem-solving.html">Neuroplasticity</a></p>
   </div>
   <div class="image">  
     <img src="image/carl-heyerdahl-KE0nC8-58MQ-unsplash.jpg">
