Change title of sprint 4 core blog

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
    <p style="text-align: right"><a href="blog/Identity&Values.html">Identity & Values</a></p>
    <p style="text-align: right"><a href="blog/Learning-Plan.html">Learning Plan</a></p>
    <p style="text-align: right"><a href="blog/emotional-intelligence.html">Emotional Intelligence</a></p>
-   <p style="text-align: right"><a href="blog/neuroplasticity.html">Neuroplasticity</a></p>
+   <p style="text-align: right"><a href="blog/neuroplasticity.html">Neuroplasticity & Growth Mindset</a></p>
   </div>
 </div>
 
