--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
    <p style="text-align: right"><a href="blog/Learning-Plan.html">Learning Plan</a></p>
    <p style="text-align: right"><a href="blog/emotional-intelligence.html">Emotional Intelligence</a></p>
    <p style="text-align: right"><a href="blog/neuroplasticity.html">Neuroplasticity & Growth Mindset</a></p>
+   <p style="text-align: right"><a href="blog/foundations-reflection.html">Foundation Reflection</a></p>
   </div>
 </div>
 
